[package]
name = "multindex"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
description = "Index slice with multiple const indices and ranges."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

testing = []

[dependencies]

[dev-dependencies]
fastrand = "1.3"