[package]
name = "multindex"
version = "0.1.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Index slices with multiple const indices/ranges."
documentation = "https://docs.rs/multindex/"
readme="./README.md"
keywords = ["no-std", "rust-patterns", "indexing"]
categories = ["no-std", "rust-patterns"]
repository = "https://github.com/rodrimati1992/multindex/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "./LICENSE-ZLIB.md", 
]

[badges]
travis-ci = { repository =  "rodrimati1992/multindex/" }

[features]

testing = []

[dependencies]

[dev-dependencies]
fastrand = "1.3"